Learning Forge, Anvil and Chisel with FundMe contract.

--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = ["@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/"]
+[profile.dependencies]
+forge-std = { git = "https://github.com/foundry-rs/forge-std", tag = "v1.0.0" }
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
